// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Разметка листинга Должен отдать структурированные данные для оффера на листинге 1`] = `
Array [
  Object {
    "@context": "https://schema.org",
    "@type": "https://schema.org/Product",
    "brand": "FORD",
    "color": "белый",
    "description": "Автомобиль в ИДЕАЛЬНОМ состоянии, на 5+++++
На Гарантии!!!
Забегая вперед продаю из-за нужды в день…",
    "image": Object {
      "@context": "https://schema.org",
      "@type": "ImageObject",
      "author": "Дмитрий",
      "contentUrl": "http:picture-of-cat",
      "datePublished": "2019-03-21",
      "description": "Ford EcoSport I белого цвета по цене 855 000 рублей в Москве",
      "name": "Ford EcoSport I белого цвета",
    },
    "name": "Ford EcoSport I",
    "offers": Object {
      "@context": "https://schema.org",
      "@type": "AggregateOffer",
      "highPrice": 45000,
      "lowPrice": 45000,
      "offerCount": 1,
      "priceCurrency": "RUR",
    },
    "productionDate": 2017,
  },
  null,
]
`;

exports[`Разметка листинга Должен отдать структурированные данные листинга коммерческих машин 1`] = `
Array [
  Object {
    "@context": "https://schema.org",
    "@type": "https://schema.org/Product",
    "brand": "FORD",
    "color": "белый",
    "description": "Автомобиль в ИДЕАЛЬНОМ состоянии, на 5+++++
На Гарантии!!!
Забегая вперед продаю из-за нужды в день…",
    "image": Object {
      "@context": "https://schema.org",
      "@type": "ImageObject",
      "author": "Дмитрий",
      "contentUrl": "http:picture-of-cat",
      "datePublished": "2019-03-21",
      "description": "Ford EcoSport I белого цвета по цене 855 000 рублей в Москве",
      "name": "Ford EcoSport I белого цвета",
    },
    "name": "Ford EcoSport I",
    "offers": Object {
      "@context": "https://schema.org",
      "@type": "AggregateOffer",
      "highPrice": 45000,
      "lowPrice": 45000,
      "offerCount": 1,
      "priceCurrency": "RUR",
    },
    "productionDate": 2017,
  },
  null,
]
`;

exports[`Разметка листинга Должен отдать структурированные данные листинга легковых 1`] = `
Array [
  Object {
    "@context": "https://schema.org",
    "@type": "https://schema.org/Product",
    "brand": "FORD",
    "color": "белый",
    "description": "Автомобиль в ИДЕАЛЬНОМ состоянии, на 5+++++
На Гарантии!!!
Забегая вперед продаю из-за нужды в день…",
    "image": Object {
      "@context": "https://schema.org",
      "@type": "ImageObject",
      "author": "Дмитрий",
      "contentUrl": "http:picture-of-cat",
      "datePublished": "2019-03-21",
      "description": "Ford EcoSport I белого цвета по цене 855 000 рублей в Москве",
      "name": "Ford EcoSport I белого цвета",
    },
    "name": "Ford EcoSport I",
    "offers": Object {
      "@context": "https://schema.org",
      "@type": "AggregateOffer",
      "highPrice": 45000,
      "lowPrice": 45000,
      "offerCount": 1,
      "priceCurrency": "RUR",
    },
    "productionDate": 2017,
  },
  null,
  Object {
    "@context": "https://schema.org",
    "@type": "SaleEvent",
    "description": "Сравни стоимость ОСАГО у разных компаний",
    "endDate": "2022-02-01T21:00:00+03:00",
    "location": Object {
      "@type": "Place",
      "name": "Авто.ру",
    },
    "name": "🔔 Страховка-онлайн",
    "startDate": "2021-12-01T21:00:00+03:00",
  },
  Object {
    "@context": "https://schema.org",
    "@type": "SaleEvent",
    "description": "Проверка ПроАвто",
    "endDate": "2022-02-01T21:00:00+03:00",
    "location": Object {
      "@type": "Place",
      "name": "Авто.ру",
    },
    "name": "🔔 Проверка по VIN",
    "startDate": "2021-12-01T21:00:00+03:00",
  },
  Object {
    "@context": "https://schema.org",
    "@type": "SaleEvent",
    "description": "Добавь свое авто в Гараж и получай бонусы",
    "endDate": "2022-02-01T21:00:00+03:00",
    "location": Object {
      "@type": "Place",
      "name": "Авто.ру",
    },
    "name": "🔔 Скидки в твоем Гараже",
    "startDate": "2021-12-01T21:00:00+03:00",
  },
]
`;
